[gd_scene load_steps=6 format=3 uid="uid://ckyg7jm3umrv4"]

[ext_resource type="FontFile" uid="uid://dche5uxxdw2a3" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://beomr1vb4hvkj" path="res://scripts/hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://bixi67mwwgn6m" path="res://fonts/LoveDays-2v7Oe.ttf" id="3_5ysmq"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -144.0
offset_right = 576.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 64
text = "Count the Wolves !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -98.0
offset_right = 4.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AbilityUnlockedLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -475.75
offset_top = -222.0
offset_right = 475.75
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 56
text = "Press E to send wolves to sleep !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AbilityUnlockedTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WolfAbilityCooldown" type="Node" parent="."]

[node name="WolfAbilityCooldownTimer" type="Timer" parent="WolfAbilityCooldown"]

[node name="WolfAbilityCooldownLabel" type="Label" parent="WolfAbilityCooldown"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -54.0
offset_right = 55.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6871783, 0.60317487, 0.05966848, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrogAbilityCooldown" type="Node" parent="."]

[node name="FrogAbilityCooldownTimer" type="Timer" parent="FrogAbilityCooldown"]

[node name="FrogAbilityCooldownLabel" type="Label" parent="FrogAbilityCooldown"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -54.0
offset_right = 113.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_colors/font_color = Color(4.813075e-08, 0.6607219, 0.3659703, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="AbilityUnlockedTimer" to="." method="_on_ability_unlocked_timer_timeout"]
[connection signal="timeout" from="WolfAbilityCooldown/WolfAbilityCooldownTimer" to="." method="_on_wolf_ability_cooldown_timer_timeout"]
[connection signal="timeout" from="FrogAbilityCooldown/FrogAbilityCooldownTimer" to="." method="_on_frog_ability_cooldown_timer_timeout"]
